--- a/css/Pagina.css
+++ b/css/Pagina.css
@@ -1,196 +1,102 @@
-@charset "utf-8";
-
-* {
+html, body {
+    min-height: 100%;
     margin: 0;
-    padding: 0;
 }
 
-#body {
-    background-image: linear-gradient(rgb(255, 255, 255),rgb(255, 239, 239), rgb(165, 14, 14));
-    background-color: #ffffff;
-    height: 70%;
+#contenedor {
+    position: relative;
+    min-height: 100vh;
 }
 
-
-.subtitulo {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    color:  rgb(241, 80, 80);
-    text-align: center;
-    border: black;
-    font-family: sans-serif;
-    font-weight: bold;
-    font-size: 45px;
-    padding: 20px;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-}
-
-
-.div_texto {
-    color: white;
-    padding: 0px;
-    margin: 0px;
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: lighter;
-    font-size: 25px;
-    margin-left: auto;
-    margin-right: auto;
+section {
+    height: 80%;
     width: 50%;
-    background-color:  rgba(201, 57, 57, 0.658);
-    padding: 10px;
-    border-radius: 10px;
+    float: left;
+}
+
+#patron1 {
+    margin: 10%;
+    width: 630px;
+    height: 340px;
+    background: repeating-linear-gradient( -45deg, #dadada, #dadada 4px, #ffffff 4px, #ffffff 20px );
+    z-index: -2;
+    margin-bottom: 2%;
+}
+
+#patron2 {
+    margin: 10%;
+    width: 630px;
+    height: 340px;
+
+    z-index: -2;
+    margin-bottom: 2%;
+
+    background-color: white;
+    opacity: 1;
+    background-image:  linear-gradient(135deg, #dadada 25%, transparent 25%), linear-gradient(225deg, #dadada 25%, transparent 25%), linear-gradient(45deg, #dadada 25%, transparent 25%), linear-gradient(315deg, #dadada 25%, white 25%);
+    background-position:  16px 0, 16px 0, 0 0, 0 0;
+    background-size: 16px 16px;
+    background-repeat: repeat;
+}
+
+.titulo {
+    text-align: center;
+    padding-left: 10%;
+    font-family: 'Roboto Mono', monospace;
+    color: #0d0505;
+    display: inline-block;
+    z-index: 1;
+    font-size: 120px;
+    font-weight: 700;
+    letter-spacing: -1px;
+    opacity: 0.9;
+}
+
+
+#imagenIngles {
+    width: 1000px;
+    margin-left: -100;
+}
+
+#parrafo {
+    color: #0d0505	;
+    font-family: 'Space Mono', monospace;
+    font-size: 25px;
+    opacity: 0.9;
+
+}
+
+.bloque {
+    margin-left: 10%;
+    width: 630px;
+    height: 150px;
 }
 
 .boton {
-    margin: 10px;
-    text-align: center;
-    font-weight: bold;
-    font-family: sans-serif;
-    font-size: 20px;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 25px;
+    background-color: rgb(255, 109, 109);
+    border-style: none;
     margin-top: 25px;
-    margin-bottom: 25px;
-    padding-bottom: 10px;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.boton a {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    text-decoration: none;
-    color:black;
-    border: solid ;
+    margin-left: 25px;
     padding: 10px;
-    border-radius: 10px;
+    box-shadow:inset 0px 1px 0px 0px (255, 109, 109);
+	border-radius: 5px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	padding:6px 24px;
+	text-decoration:none;
 }
 
-.boton a:link {
-    text-decoration: none;
-    color: black;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
+.boton:hover {
+	background-color:#f54949;
+}
+.boton:active {
+	position:relative;
+	top:1px;
 }
 
-.boton a:visited {
-    text-decoration: none;
-    color: black;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.boton a:active {
-    text-decoration: none;
-    color: black;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.boton a:hover {
-    border: solid rgb(241, 80, 80);
-    text-decoration: none;
-    color:black;
-    background-color: white;
-    padding: 10px;
-    border-radius: 10px;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.imagenH {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#jugar {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    text-align: center;
-    font-weight: bold;
-    font-family: sans-serif;
-    font-size: 45px;
-    margin: 20px;
-}
-
-#jugar a {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    text-decoration: none;
-    color:black;
-    border: solid;
-    padding: 10px;
-    border-radius: 10px;
-}
-
-#jugar a:link {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    text-decoration: none;
-    color: black;
-}
-
-#jugar a:visited {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    text-decoration: none;
-    color: black;
-}
-
-#jugar a:active {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    text-decoration: none;
-    color: black;
-}
-
-#jugar a:hover {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    border: solid rgb(241, 80, 80);
-    text-decoration: none;
-    color:black;
-    background-color: white;
-    padding: 10px;
-    border-radius: 10px;
-}
-
-#footer {
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: lighter;
-    font-size: 20px;
-    height: 30%;
-    width: 100%;
-    padding-bottom: 35px;
-    padding-top: 35px;
-    margin-top: 60px;
-    color: white;
-    background-color: rgba(165, 14, 14, 0.24);
-}
-
-.imagen {
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    background: none;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 25px;
-}
-
-#logo {
-    background: none;
-    width:450px;
-    height: 126px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#Scratch {
-    border: solid rgba(182, 0, 0, 0.315) 5px;
+#seccion-abajo {
+    box-shadow: 0px 0px 50px 1px rgba(0, 0, 0, 0.288)
 }
