--- a/css/Pagina.css
+++ b/css/Pagina.css
@@ -82,7 +82,7 @@ section {
     margin-top: 25px;
     margin-left: 25px;
     padding: 10px;
-    box-shadow:inset 0px 1px 0px 0px rgba(255, 109, 109);
+    box-shadow:inset 0px 1px 0px 0px rgb(255, 109, 109);
 	border-radius: 5px;
 	display:inline-block;
 	cursor:pointer;
@@ -100,5 +100,5 @@ section {
 }
 
 #seccion-abajo {
-    box-shadow: 0px 0px 50px 1px rgba(0, 0, 0, 0.288)
+    box-shadow: 0px 0px 50px 1px rgb(0, 0, 0, 0.288)
 }
